syntax = "proto3";

import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";

package rpc;

service Helio {
    rpc ListInstance (ListInstanceArgs) returns (ListInstanceResult);
    rpc CreateInstance (CreateInstanceArgs) returns (google.protobuf.Empty);
    rpc StartInstance (StartInstanceArgs) returns (google.protobuf.Empty);
}

message ListInstanceArgs {
    string created_by = 1;
}

message ListInstanceResult {
    repeated string result = 1;
}

message CreateInstanceArgs {
    string uuid = 1;
    optional string label = 2;
    int32 itype = 3;
    int32 image = 4;
    string created_by = 5;
}

message StartInstanceArgs {
    string uuid = 1;
    string created_by = 2;
}